--- a/companywebsite/static/products.html
+++ b/companywebsite/static/products.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>EduSoft Private Limited</title>
+    <title>DRIFTER</title>
     <link rel="stylesheet" href="./css/layout.css" />
-    <link rel="icon" href="./img/icon.png" type="image/x-icon" />
+    <link rel="icon" href="./img/ico.jpeg" type="image/x-icon" />
   </head>
 
   <body>
     <div class="container">
-      <div class="banner">EduSoft Private Limited.</div>
+      <div class="banner">DRIFTER</div>
       <div class="menu">
         <div class="menuitem"><a href="/static/home.html">Home</a></div>
-        <div class="menuitemselected">
-          <a href="/static/products.html">Products</a>
-        </div>
-        <div class="menuitem"><a>People</a></div>
-        <div class="menuitem"><a>Contact Us</a></div>
+        <div class="menuitemselected"><a href="/static/products.html">Products</a></div>
+        <div class="menuitem"><a href="/static/People.html">People</a></div>
+        <div class="menuitem"><a href="/static/contact us.html">contact us</a></div>
       </div>
       <div class="content">
         <div class="productcontent">    
@@ -23,23 +21,93 @@
           <div class="productitems">
               <div class="productitem"> 
                   <div class="itemimage">
-                  <img src="/static/img/tally_gold.png" alt="product image">
+                  <img src="/static/img/head.png" alt="product image">
                   </div>
-                  <div class="itemname">Tally Gold</div>
+                  <div class="itemname">Drag X200</div>
                   <div class="itemprice">Price: Rs.40,000.00 </div>
               </div>
               <div class="productitem"> 
                   <div class="itemimage">
-                  <img src="/static/img/tally_silver.png"  alt="product image">
+                  <img src="/static/img/int.png"  alt="product image">
                   </div>
-                  <div class="itemname">Tally Silver</div>
+                  <div class="itemname">DRX 5000</div>
                   <div class="itemprice">Price: Rs.10,000.00 </div>
               </div>
+              <div class="productitem"> 
+                <div class="itemimage">
+                <img src="/static/img/g300.png"  alt="product image">
+                </div>
+                <div class="itemname">G3000</div>
+                <div class="itemprice">Price: Rs.16,000.00 </div>
+             </div>
+             <div class="productitem"> 
+              <div class="itemimage">
+              <img src="/static/img/mother.png"  alt="product image">
+              </div>
+              <div class="itemname">Krypt 6000 </div>
+              <div class="itemprice">Price: Rs.45,000.00 </div>
+             </div>
+           <div class="productitem"> 
+            <div class="itemimage">
+            <img src="/static/img/mot.png"  alt="product image">
+            </div>
+            <div class="itemname">BS7000 bison gear </div>
+            <div class="itemprice">Price: Rs.60,000.00 </div>
+           </div>
+           <div class="productitem"> 
+            <div class="itemimage">
+            <img src="/static/img/graphic.png"  alt="product image">
+            </div>
+            <div class="itemname">Syren GTX1700</div>
+            <div class="itemprice">Price: Rs.70,000.00 </div>
+        </div>
+        <div class="productitem"> 
+          <div class="itemimage">
+          <img src="/static/img/head.png" alt="product image">
+          </div>
+          <div class="itemname">Drag X250</div>
+          <div class="itemprice">Price: Rs.43,000.00 </div>
+      </div>
+      <div class="productitem"> 
+        <div class="itemimage">
+        <img src="/static/img/MAG.png" alt="product image">
+        </div>
+        <div class="itemname">Drag X2500</div>
+        <div class="itemprice">Price: Rs.70,000.00 </div>
+    </div>
+    <div class="productitem"> 
+      <div class="itemimage">
+      <img src="/static/img/car.png" alt="product image">
+      </div>
+      <div class="itemname">HYPER 4300</div>
+      <div class="itemprice">Price: Rs.50,999.00 </div>
+   </div>
+  <div class="productitem"> 
+    <div class="itemimage">
+    <img src="/static/img/coo.png" alt="product image">
+    </div>
+    <div class="itemname">TA47GH</div>
+    <div class="itemprice">Price: Rs.19,999.00 </div>
+  </div>
+  <div class="productitem"> 
+    <div class="itemimage">
+    <img src="/static/img/3040.png" alt="product image">
+    </div>
+    <div class="itemname">SPERO RT7000</div>
+    <div class="itemprice">Price: Rs.80,000.00 </div>
+</div>
+<div class="productitem"> 
+  <div class="itemimage">
+  <img src="/static/img/MSI.png" alt="product image">
+  </div>
+  <div class="itemname">SPERO GT6888</div>
+  <div class="itemprice">Price: Rs.30,000.00 </div>
+</div>
           </div>
           </div>        
       </div>
       <div class="footer">
-        Copyright &#169; 2021 EduSoft Private Limited, Developed by Obed Otto.
+        Copyright &#169; 2004 DRIFTER, Developed by M GAUTHAM.
       </div>
     </div>
   </body>
